--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
     "@payloadcms/plugin-redirects": "^1.0.0",
     "@payloadcms/plugin-seo": "^1.0.10",
     "@payloadcms/richtext-slate": "^1.0.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "escape-html": "^1.0.3",
     "express": "^4.19.2",
     "framer-motion": "^11.11.9",
+    "lucide-react": "^0.453.0",
     "next": "13.5.2",
     "payload": "^2.0.0",
     "payload-admin-bar": "^1.0.6",
@@ -42,7 +46,8 @@
     "react-hook-form": "7.45.4",
     "react-router-dom": "5.3.4",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
