--- a/package.json
+++ b/package.json
@@ -51,28 +51,29 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.1.6",
-    "@payloadcms/eslint-config": "^0.0.1",
     "@swc/core": "1.6.1",
     "@types/escape-html": "^1.0.2",
     "@types/express": "^4.17.9",
     "@types/node": "18.11.3",
     "@types/qs": "^6.9.8",
     "@types/react": "18.0.21",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
     "nodemon": "^2.0.6",
     "postcss": "^8.4.47",
-    "prettier": "^2.7.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "slate": "0.91.4",
     "tailwindcss": "^3.4.13",
     "ts-node": "10.9.1",
