--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.45.4",
     "react-router-dom": "5.3.4",
+    "react-twc": "^1.4.2",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
@@ -59,7 +60,6 @@
     "@types/react": "18.0.21",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "autoprefixer": "^10.4.20",
     "copyfiles": "^2.4.1",
     "eslint": "^8.57.1",
@@ -70,6 +70,7 @@
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.6",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
