--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-i18next": "^15.0.3",
     "react-router-dom": "5.3.4",
     "react-twc": "^1.4.2",
+    "react-use": "^17.5.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
