--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "^12.0.0-alpha.1",
     "geist": "^1.3.0",
     "graphql": "^16.8.2",
     "i18next": "^23.16.2",
