--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@payloadcms/plugin-seo": "beta",
     "@payloadcms/richtext-lexical": "beta",
     "@payloadcms/ui": "beta",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-label": "^2.1.0",
