--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
     "@next/eslint-plugin-next": "^13.1.6",
     "@payloadcms/eslint-config": "^1.1.1",
     "@tailwindcss/typography": "^0.5.13",
@@ -80,6 +81,7 @@
     "eslint-config-next": "15.0.0",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.3",
     "typescript": "5.6.3"
   },
