--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -27,6 +27,5 @@
   "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
   "importOrderMergeDuplicateImports": true,
   "importOrderCombineTypeAndValueImports": true,
-  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
-  "tailwindFunctions": ["twx"]
+  "plugins": ["@ianvs/prettier-plugin-sort-imports"]
 }
