--- a/package.json
+++ b/package.json
@@ -79,9 +79,10 @@
     "copyfiles": "^2.4.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "^8.4.38",
     "prettier": "^3.0.3",
-    "prettier-plugin-tailwindcss": "^0.6.9",
     "tailwindcss": "^3.4.3",
     "typescript": "5.6.3"
   },
