--- a/package.json
+++ b/package.json
@@ -18,17 +18,16 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "beta",
-    "@payloadcms/live-preview-react": "beta",
-    "@payloadcms/next": "beta",
-    "@payloadcms/payload-cloud": "beta",
-    "@payloadcms/plugin-form-builder": "beta",
-    "@payloadcms/plugin-nested-docs": "beta",
-    "@payloadcms/plugin-redirects": "beta",
-    "@payloadcms/plugin-search": "beta",
-    "@payloadcms/plugin-seo": "beta",
-    "@payloadcms/richtext-lexical": "beta",
-    "@payloadcms/ui": "beta",
+    "@payloadcms/db-postgres": "3.0.1",
+    "@payloadcms/live-preview-react": "3.0.1",
+    "@payloadcms/next": "3.0.1",
+    "@payloadcms/plugin-form-builder": "3.0.1",
+    "@payloadcms/plugin-nested-docs": "3.0.1",
+    "@payloadcms/plugin-redirects": "3.0.1",
+    "@payloadcms/plugin-search": "3.0.1",
+    "@payloadcms/plugin-seo": "3.0.1",
+    "@payloadcms/richtext-lexical": "3.0.1",
+    "@payloadcms/ui": "3.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
@@ -48,10 +47,9 @@
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
     "jsonwebtoken": "9.0.2",
-    "lexical": "0.18.0",
     "lucide-react": "^0.378.0",
-    "next": "15.0.0",
-    "payload": "beta",
+    "next": "^15",
+    "payload": "3.0.1",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
     "react": "19.0.0-rc-65a56d0e-20241020",
