--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "start": "cross-env NODE_OPTIONS=--no-deprecation next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.3",
     "@payloadcms/db-postgres": "3.0.1",
     "@payloadcms/live-preview-react": "3.0.1",
     "@payloadcms/next": "3.0.1",
@@ -35,6 +38,7 @@
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/mdx": "^2.0.13",
     "@uidotdev/usehooks": "^2.4.1",
     "accept-language": "^3.0.20",
     "class-variance-authority": "^0.7.0",
@@ -57,6 +61,8 @@
     "react-hook-form": "7.45.4",
     "react-i18next": "^15.0.3",
     "react-twc": "^1.4.2",
+    "react-use": "^17.5.1",
+    "remark-gfm": "^4.0.0",
     "sharp": "0.32.6",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
