--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@payloadcms/plugin-seo": "3.0.1",
     "@payloadcms/richtext-lexical": "3.0.1",
     "@payloadcms/ui": "3.0.1",
+    "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.1",
