--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.378.0",
     "next": "^15",
+    "nextjs-toploader": "^3.7.15",
     "payload": "3.0.1",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
