--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,6 @@ NEXT_PRIVATE_DRAFT_SECRET=demo-draft-secret
 # Used to revalidate static pages
 REVALIDATION_KEY=demo-revalation-key
 NEXT_PRIVATE_REVALIDATION_KEY=demo-revalation-key
+
+# available regions: mainland, global
+NEXT_PUBLIC_DEPLOY_REGION=mainland
