--- a/helmchart/values.yaml
+++ b/helmchart/values.yaml
@@ -1,2 +1,40 @@
 version: v1.0.2
-envs: []
+envs:
+- name: NEXT_PUBLIC_IS_LIVE
+  value: ""
+global:
+  envs:
+  - name: DATABASE_URI
+    value: ""
+  - name: PAYLOAD_SECRET
+    value: ""
+  - name: PAYLOAD_PUBLIC_SERVER_URL
+    value: ""
+  - name: PAYLOAD_PUBLIC_DRAFT_SECRET
+    value: ""
+  - name: REVALIDATION_KEY
+    value: ""
+  - name: NEXT_PUBLIC_SERVER_URL
+    value: ""
+  - name: NEXT_PRIVATE_DRAFT_SECRET
+    value: ""
+  - name: NEXT_PRIVATE_REVALIDATION_KEY
+    value: ""
+mainland:
+  envs:
+  - name: DATABASE_URI
+    value: ""
+  - name: PAYLOAD_SECRET
+    value: ""
+  - name: PAYLOAD_PUBLIC_SERVER_URL
+    value: ""
+  - name: PAYLOAD_PUBLIC_DRAFT_SECRET
+    value: ""
+  - name: REVALIDATION_KEY
+    value: ""
+  - name: NEXT_PUBLIC_SERVER_URL
+    value: ""
+  - name: NEXT_PRIVATE_DRAFT_SECRET
+    value: ""
+  - name: NEXT_PRIVATE_REVALIDATION_KEY
+    value: ""
