--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.378.0",
     "next": "^15",
     "nextjs-toploader": "^3.7.15",
+    "nprogress": "^0.2.0",
     "payload": "3.0.1",
     "payload-admin-bar": "^1.0.6",
     "prism-react-renderer": "^2.3.1",
