--- a/helmchart/templates/musedam-website-global.yaml
+++ b/helmchart/templates/musedam-website-global.yaml
@@ -65,6 +65,7 @@ metadata:
   name: musedam-website-global-ingress
   namespace: musedam
   annotations:
+    # kubernetes.io/ingress.class: nginx
     kubernetes.io/ingress.class: azure/application-gateway
     appgw.ingress.kubernetes.io/health-probe-status-codes: "200-499"
     appgw.ingress.kubernetes.io/ssl-redirect: "true"
