--- a/helmchart/templates/musedam-website.yaml
+++ b/helmchart/templates/musedam-website.yaml
@@ -1,17 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: musedam-website-global
+  name: musedam-website
   namespace: musedam
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: musedam-website-global
+      app: musedam-website
   template:
     metadata:
       labels:
-        app: musedam-website-global
+        app: musedam-website
     spec:
       containers:
       - image: "musecr.azurecr.cn/muse/musedam-website:{{ .Values.version }}"
@@ -22,23 +22,19 @@ spec:
         - name: {{ .name }}
           value: {{ .value }}
         {{- end }}
-        {{- range .Values.global.envs }}
-        - name: {{ .name }}
-          value: {{ .value }}
-        {{- end }}
         ports:
         - containerPort: 3000
           protocol: TCP
         livenessProbe:
           httpGet:
-            path: /en
+            path: /zh
             port: 3000
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
         readinessProbe:
           httpGet:
-            path: /en
+            path: /zh
             port: 3000
           initialDelaySeconds: 30
           periodSeconds: 10
@@ -49,50 +45,39 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: musedam-website-global-svc
+  name: musedam-website-svc
   namespace: musedam
 spec:
   ports:
   - port: 3000
     targetPort: 3000
   selector:
-    app: musedam-website-global
+    app: musedam-website
   type: ClusterIP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: musedam-website-global-ingress
+  name: musedam-website-ingress
   namespace: musedam
   annotations:
-    # kubernetes.io/ingress.class: nginx
-    kubernetes.io/ingress.class: azure/application-gateway
-    appgw.ingress.kubernetes.io/health-probe-status-codes: "200-499"
-    appgw.ingress.kubernetes.io/ssl-redirect: "true"
+    kubernetes.io/ingress.class: nginx
+    # kubernetes.io/ingress.class: azure/application-gateway
+    # appgw.ingress.kubernetes.io/health-probe-status-codes: "200-499"
+    # appgw.ingress.kubernetes.io/ssl-redirect: "true"
 spec:
   tls:
   - secretName: ssl-wildcard-musedam-cc
     hosts:
-    - en.musedam.cc
-    # - www.musedam.cc
+    - {{ .Values.domain }}
   rules:
-  - host: en.musedam.cc
+  - host: {{ .Values.domain }}
     http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
-            name: musedam-website-global-svc
+            name: musedam-website-svc
             port:
               number: 3000
-  # - host: www.musedam.cc
-  #   http:
-  #     paths:
-  #     - path: /
-  #       pathType: Prefix
-  #       backend:
-  #         service:
-  #           name: musedam-website-global-svc
-  #           port:
-  #             number: 3000
