--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,8 @@ PAYLOAD_SECRET=YOUR_SECRET_HERE
 
 # Used to format links and URLs
 PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+SERVER_URL=http://localhost:3000
+ASSET_PREFIX=http://localhost:3000
 
 # Allow robots to index the site (optional)
 NEXT_PUBLIC_IS_LIVE=
