deploy region should be set on server end

--- a/helmchart/values.yaml
+++ b/helmchart/values.yaml
@@ -1,23 +1,15 @@
-version: v1.0.12
+version: v1.0.14
 domain: www.musedam.cc
 envs:
-- name: NEXT_PUBLIC_IS_LIVE
-  value: ""
-- name: NEXT_PUBLIC_DEPLOY_REGION
+- name: DEPLOY_REGION
   value: ""
 - name: DATABASE_URI
   value: ""
 - name: PAYLOAD_SECRET
   value: ""
-- name: PAYLOAD_PUBLIC_SERVER_URL
-  value: ""
-- name: PAYLOAD_PUBLIC_DRAFT_SECRET
-  value: ""
 - name: REVALIDATION_KEY
   value: ""
-- name: NEXT_PUBLIC_SERVER_URL
-  value: ""
-- name: NEXT_PUBLIC_ASSET_PREFIX
+- name: SITE_SERVER_URL
   value: ""
 - name: NEXT_PRIVATE_DRAFT_SECRET
   value: ""
