--- a/.env.example
+++ b/.env.example
@@ -5,14 +5,12 @@ DATABASE_URI=mongodb://127.0.0.1/payload-template-website
 PAYLOAD_SECRET=YOUR_SECRET_HERE
 
 # Used to format links and URLs
-PAYLOAD_PUBLIC_SERVER_URL=http://localhost:3000
-NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+SITE_SERVER_URL=http://localhost:3000
 
 # Allow robots to index the site (optional)
 NEXT_PUBLIC_IS_LIVE=
 
 # Used to preview drafts
-PAYLOAD_PUBLIC_DRAFT_SECRET=demo-draft-secret
 NEXT_PRIVATE_DRAFT_SECRET=demo-draft-secret
 
 # Used to revalidate static pages
@@ -20,4 +18,4 @@ REVALIDATION_KEY=demo-revalation-key
 NEXT_PRIVATE_REVALIDATION_KEY=demo-revalation-key
 
 # available regions: mainland, global
-NEXT_PUBLIC_DEPLOY_REGION=mainland
+DEPLOY_REGION=mainland
