--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 # Database connection string
 DATABASE_URI=mongodb://127.0.0.1/payload-template-website
 
@@ -19,3 +20,5 @@ NEXT_PRIVATE_REVALIDATION_KEY=demo-revalation-key
 
 # available regions: mainland, global
 DEPLOY_REGION=mainland
+NEXT_PUBLIC_MUSEDAM_SERVER_URL=https://musedam-service.test.tezign.com
+NEXT_PUBLIC_MUSEAI_URL=https://muse-web.test.tezign.com
