--- a/Dockerfile.job
+++ b/Dockerfile.job
@@ -5,6 +5,7 @@ RUN apk add --no-cache libc6-compat
 WORKDIR /app
 
 COPY . .
-RUN corepack enable pnpm && pnpm i --frozen-lockfile;
+# RUN corepack enable pnpm && pnpm i --frozen-lockfile;
+RUN npm install -g pnpm && pnpm i --frozen-lockfile;
 
 ENV NODE_ENV=production
