--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.0.3",
+    "@next/third-parties": "^15.1.7",
     "@payloadcms/db-postgres": "3.0.1",
     "@payloadcms/live-preview-react": "3.0.1",
     "@payloadcms/next": "3.0.1",
