--- a/Dockerfile.job
+++ b/Dockerfile.job
@@ -1,4 +1,4 @@
-FROM node:18-alpine AS base
+FROM node:20-alpine AS base
 
 FROM base AS deps
 RUN apk add --no-cache libc6-compat
@@ -6,6 +6,7 @@ WORKDIR /app
 
 COPY . .
 # RUN corepack enable pnpm && pnpm i --frozen-lockfile;
-RUN npm install -g pnpm && pnpm i --frozen-lockfile;
+RUN npm install -g pnpm@9.12.1
+RUN pnpm i --frozen-lockfile
 
 ENV NODE_ENV=production
