--- a/package.json
+++ b/package.json
@@ -104,7 +104,8 @@
     "typescript": "5.6.3"
   },
   "engines": {
-    "node": "^18.20.2 || >=20.9.0"
+    "node": ">=20.9.0",
+    "pnpm": ">=9.12.1"
   },
   "pnpm": {
     "overrides": {
