--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-pattern": "^5.7.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
