--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0-alpha.1",
     "graphql": "^16.8.2",
     "i18next": "^23.16.2",
