--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@payloadcms/plugin-search": "3.0.1",
     "@payloadcms/plugin-seo": "3.0.1",
     "@payloadcms/richtext-lexical": "3.0.1",
+    "@payloadcms/translations": "3.0.1",
     "@payloadcms/ui": "3.0.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-avatar": "^1.1.1",
