--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@payloadcms/plugin-search": "3.0.1",
     "@payloadcms/plugin-seo": "3.0.1",
     "@payloadcms/richtext-lexical": "3.0.1",
-    "@payloadcms/storage-vercel-blob": "3.0.1",
+    "@payloadcms/storage-s3": "3.0.1",
     "@payloadcms/translations": "3.0.1",
     "@payloadcms/ui": "3.0.1",
     "@radix-ui/react-accordion": "^1.2.1",
