--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,4 @@ S3_ENDPOINT=http://localhost:9000
 S3_ACCESS_KEY_ID=YOUR-ACCESS-KEY-ID-HERE
 S3_SECRET_ACCESS_KEY=YOUR-SECRET-ACCESS-KEY-HERE
 S3_REGION=us-east-1
+S3_PATH_PREFIX=musedam-website/media
