--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.0.0-alpha.1",
     "graphql": "^16.8.2",
+    "html2pdf.js": "^0.10.3",
     "i18next": "^23.16.2",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-resources-to-backend": "^1.2.1",
