--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-use": "^17.5.1",
     "remark-gfm": "^4.0.0",
     "sharp": "0.32.6",
+    "styled-components": "^6.1.19",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
