--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: Build and push Docker image for Next.js app
         uses: docker/build-push-action@v4
+        timeout-minutes: 10  # 10 分钟超时
         with:
           context: .
           push: true
@@ -40,6 +41,7 @@ jobs:
 
       - name: Build and push Docker image for Jobs
         uses: docker/build-push-action@v4
+        timeout-minutes: 10  # 10 分钟超时
         with:
           context: .
           file: ./Dockerfile.job
